[package]
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
name = "generic-http-client"
version = "0.1.0"

[features]
default = ["tls"]
tls = [ "rustls", "webpki", "webpki-roots" ]

[dependencies]
http = "0.2"
httparse = "1.3"
url = "2.1"
rustls = { version = "0.18", optional = true }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.20", optional = true }
